syntax = "proto3";

option csharp_namespace = "Grpc_App_1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayWeather (WeatherRequest) returns (WeatherReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message WeatherRequest {
  string weather = 2;
}

message WeatherReply {
  string message = 2;
}
